--- a/css/common.css
+++ b/css/common.css
@@ -31,7 +31,7 @@ a {
 .logo-header {
     font-family: Raleway, sans-serif;
     color: var(--primary-text-color);
-    font-weight: bold;
+    font-weight: 700;
     font-size: 26px;
     line-height: 1.2;
 }
@@ -78,7 +78,7 @@ footer {
 
 .logo-footer {
     font-family: Raleway, sans-serif;
-    font-weight: bold;
+    font-weight: 700;
     font-size: 26px;
     line-height: 1.2;
     color: var(--white-color);
