--- a/css/style.css
+++ b/css/style.css
@@ -18,7 +18,7 @@
 /* features */
 
 .features .title {
-    font-weight: bold;
+    font-weight: 700;
     font-size: 14px;
     line-height: 1.14;
     color: var(--primary-text-color);
@@ -33,7 +33,7 @@
 /* activity */
 
 .activity .title {
-    font-weight: bold;
+    font-weight: 700;
     font-size: 36px;
     line-height: 1.16;
     text-align: center;
@@ -47,7 +47,7 @@
 }
 
 .team .title {
-    font-weight: bold;
+    font-weight: 700;
     font-size: 36px;
     line-height: 1.16;
     text-align: center;
@@ -73,7 +73,7 @@
 
 .button {
     font-family: inherit;
-    font-weight: bold;
+    font-weight: 700;
     font-size: 16px;
     line-height: 1.87;
     letter-spacing: 0.06em;
@@ -89,7 +89,7 @@
 /* Стили для portfolio.html */
 
 .portfolio .title {
-    font-weight: bold;
+    font-weight: 700;
     font-size: 18px;
     line-height: 2;
     letter-spacing: 0.06em;
