--- a/css/style.css
+++ b/css/style.css
@@ -32,7 +32,8 @@
 
 /* activity */
 
-.activity .title {
+.activity .title,
+.team .title {
     font-weight: 700;
     font-size: 36px;
     line-height: 1.16;
@@ -44,14 +45,6 @@
 
 .team {
     background-color: #F5F4FA;
-}
-
-.team .title {
-    font-weight: 700;
-    font-size: 36px;
-    line-height: 1.16;
-    text-align: center;
-    color: var(--primary-text-color);
 }
 
 .team .employee {
