--- a/css/style.css
+++ b/css/style.css
@@ -72,6 +72,7 @@
     letter-spacing: 0.06em;
     color: var(--primary-text-color);
     background-color: var(--button-bg-color);
+    text-decoration: none;
 }
 
 .button.primary {
