delete excess <section>, change ".list .text" to ".portfolio . text"

--- a/css/style.css
+++ b/css/style.css
@@ -90,7 +90,7 @@
     color: var(--primary-text-color);
 }
 
-.list .text {
+.portfolio .text {
     font-size: 16px;
     line-height: 1.87;
     color: var(--secondary-text-color);
