--- a/css/style.css
+++ b/css/style.css
@@ -80,6 +80,12 @@
     background-color: var(--accent-color);
 }
 
+.button:hover,
+.button:focus {
+    background-color: var(--accent-color);
+    color: var(--white-color);
+}
+
 /* Стили для portfolio.html */
 
 .portfolio .title {
